--- a/hikehub/src/Components/OurStory/OurStory.module.css
+++ b/hikehub/src/Components/OurStory/OurStory.module.css
@@ -1,34 +1,108 @@
-.storyContainer{
+.storyContainer , .expertiseContainer{
     width: 100%;
-    /* border: 2px solid red; */
+    /* border: 2px solid black; */
     display: flex;
-    height: 25em;
+    height: auto;
     justify-content: space-between;
+    /* padding: 2em 0; */
+    align-items: center;
 }
 
 
-.storyContainer>section{
-width: 45%;
+.storyContainer>section , .expertiseContainer>section{
+width: 46%;
 /* border: 2px solid green; */
 height: 100%;
 }
 
 .myImg{
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: cover;
+    /* border: 2px solid red; */
+    height: 23em;
     border-radius: var(--border-radius);
 }
 .textHolder{
     display: flex;
     flex-direction: column;
-    /* gap:3em; */
+    gap:1.7em;
     /* border: 1px solid red; */
     justify-content: space-around;
+    height: 100%;
 
 }
 .textHolder>p{
     font-size: 1.7em;
     line-height: 2;
     
+}
+
+@media (max-width:1475px){
+    .textHolder>p{
+        font-size: 1.6em;
+        line-height: 2;
+        
+    }
+}
+
+@media (max-width:1200px){
+    .myImg{
+        
+        height: 26em;
+    }
+    .storyContainer>section , .expertiseContainer>section{
+        width: 48%;
+        /* border: 2px solid green; */
+        height: 100%;
+        }
+}
+
+@media (max-width:977px){
+    .textHolder>p{
+        font-size: 1.6em;
+        line-height: 1.9;
+        
+    }
+}
+
+@media (max-width:915px){
+    .storyContainer {
+    flex-direction: column;
+    gap:1.3em
+    }
+
+    .expertiseContainer{
+        flex-direction: column-reverse;
+        gap:1.3em
+
+    }
+    .storyContainer>section , .expertiseContainer>section{
+        width: 100%;
+        /* border: 2px solid green; */
+        height:50%;
+
+        }
+
+        .myImg{
+        
+            height: 23em;
+        }
+
+
+        .textHolder>p{
+            font-size: 1.5em;
+            line-height: 1.6;
+            
+        }
+    
+
+}
+
+@media (max-width:400px){
+    .textHolder>p{
+        font-size: 1.3em;
+        line-height: 1.6;
+        
+    }
 }
