--- a/hikehub/src/Layout/Navbar/Navbar.module.css
+++ b/hikehub/src/Layout/Navbar/Navbar.module.css
@@ -18,6 +18,7 @@
   .imagee{
     width: 180px;
     margin-top: 1rem;
+    margin-left: 3em;
   }
   .headerBule{
     background-color: var(--first-blue-color);
@@ -77,7 +78,9 @@
     top: 35px;
     right: 35px;
     cursor: pointer;
-    color: var(--button-background-color-red);
+    /* color: var(--button-background-color-red); */
+    color: white;
+
   }
   .white{
   color:white
@@ -173,6 +176,63 @@
     align-items: center;
   }
   
+  @media(max-width: 1150px) {
+
+    .imagee{
+      width: 160px;
+      margin-top: 1rem;
+      margin-left: 3em;
+    }
+  }
+
+  @media(max-width: 950px) {
+
+    .imagee{
+      width: 140px;
+      margin-top: 1rem;
+      margin-left: 3em;
+    }
+  }
+
+  @media(max-width: 600px) {
+
+    .imagee{
+      width: 140px;
+      margin-top: 1rem;
+      margin-left: 1.7em;
+    }
+  }
+
+
+  @media(max-width: 500px) {
+
+    .imagee{
+      width: 140px;
+      /* border: 1px solid white; */
+      margin-top: 1rem;
+      margin-left: 0em;
+    }
+  }
+
+  @media(max-width: 450px) {
+
+    .imagee{
+      width: 120px;
+      /* border: 1px solid white; */
+      margin-top: 1rem;
+      margin-left: 0em;
+    }
+  }
+  @media(max-width: 300px) {
+
+    .imagee{
+      width: 110px;
+      /* border: 1px solid white; */
+      margin-top: 1rem;
+      margin-left: 0em;
+    }
+  }
+
   @media(max-width: 992px) {
     .menu {
       gap: 1rem;
@@ -196,7 +256,7 @@
       cursor: pointer;
       right: 2.5rem;
       top: 50%;
-      z-index: 10;
+      z-index: 12;
       margin-left: 1rem;
     }
     .mobile_btn_blue{
@@ -220,7 +280,10 @@
       top: 0;
       width: 100%;
       height: 100vh;
-      background-color: rgba(255, 255, 255, 0.8); /* var( --nav-white-color) background with 0.8 opacity */
+      /* background-color: rgba(255, 255, 255, 0.8); */
+      /* background-color: rgba(255, 255, 255, 0.8); */
+      background-color: rgba(56, 105, 53, 0.8); /* Equivalent RGBA values for --dark-green:#386935; */
+
       backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
       z-index: 10;
       transition: left 1s;
@@ -228,7 +291,9 @@
   }
   
   .menu a {
-    color:black;
+    color:white;
+    font-size: 1.5em;
+    margin-bottom: 10px;
   
   }
   .whatever {
