--- a/hikehub/src/Components/Benefits/Benefits.module.css
+++ b/hikehub/src/Components/Benefits/Benefits.module.css
@@ -48,7 +48,28 @@
 }
 .icons>img {
     /* width: 10em; */
-    height: 100%;
-    height: 100%;
+    height: 10rem;
+    height: 10rem;
     object-fit: contain;
+}
+@media (max-width:760px){
+    
+    .benefit{
+        font-size: 12px;
+        width: 100%;
+        margin-bottom: 0.6rem;
+    }
+    .benefit>p{
+        height: fit-content;
+        line-height: 23px;
+    }
+    .benefits{
+        flex-direction: column;
+        height: fit-content;
+    }
+    
+    .benefitsHolder{
+        height: fit-content;
+    }
+    
 }
