--- a/hikehub/src/Pages/Home/Home.module.css
+++ b/hikehub/src/Pages/Home/Home.module.css
@@ -1,26 +1,28 @@
-.bodyContainer{
+.bodyContainer {
     width: 85%;
     margin: 0 auto 3em auto;
     display: flex;
     flex-direction: column;
     gap: 6em;
+    padding-bottom: 2em;
     /* border: 1px solid red; */
 }
 
-.upcomingSection{
+.upcomingSection {
     display: flex;
     flex-direction: column;
-    gap:1em ;
-        /* border: 2px solid black; */
+    gap: 1em;
+    /* border: 2px solid black; */
 
 }
 
-.events{
+.events {
     /* border: 2px solid black; */
     display: flex;
-    gap:2em
+    gap: 2em
 }
-.comingDesc{
+
+.comingDesc {
     /* border: 1px solid red; */
     width: 30%;
     font-size: 1.7em;
@@ -30,50 +32,101 @@
     justify-content: center;
     align-items: center;
 }
-.comingDesc>p{
+
+.comingDesc>p {
     /* border: 1px solid black; */
     height: auto;
     line-height: 2;
     font-style: italic;
 }
-.upcoming{
-    /* border: 1px solid pink; */
+
+.upcoming {
+    border: 1px solid pink;
     width: 70%;
     height: auto;
     display: flex;
     justify-content: space-between;
-    /* overflow: scroll; */
-gap: 3em;
+    overflow: scroll;
+    gap: 3em;
 
 }
 
 
-@media (max-width:1250px){
-    .bodyContainer{
+@media (max-width:1560px) {
+    .bodyContainer {
+        /* width: 90%; */
+        padding-bottom: 2em;
+    }
+
+}
+@media (max-width:1000px) {
+    .bodyContainer {
+        /* width: 90%; */
+        padding-bottom: 5em;
+    }
+
+}
+
+@media (max-width:890px) {
+    .bodyContainer {
+        /* width: 90%; */
+        margin-bottom: 6em;
+    }
+
+}
+
+@media (max-width:890px) {
+    .bodyContainer {
+        /* width: 90%; */
+        margin-bottom: 6em;
+        padding-bottom: 6em;
+    }
+
+}
+
+@media (max-width:760px) {
+    .bodyContainer {
+        /* width: 90%; */
+        margin-bottom: 4em;
+        padding-bottom: 0em;
+    }
+
+}
+
+@media (max-width:1250px) {
+    .bodyContainer {
         width: 90%;
     }
-    
+
 }
-@media (max-width:900px){
-    .events{
+
+@media (max-width:900px) {
+    .events {
         flex-direction: column;
     }
-    .comingDesc{
+
+    .comingDesc {
         width: 100%;
     }
-    
-}
-@media (max-width:500px){
-    
-    .comingDesc>p{
-        line-height:34px;
+
+    .upcoming{
+        width: 100%;
     }
-    .comingDesc{
-        font-size: 1.4rem; 
-   }
-   .upcoming{
-    width: 100%;
-   }
-    
-    
+}
+
+@media (max-width:500px) {
+
+    .comingDesc>p {
+        line-height: 34px;
+    }
+
+    .comingDesc {
+        font-size: 1.4rem;
+    }
+
+    .upcoming {
+        width: 100%;
+    }
+
+
 }
